--- a/react-blog-admin/src/pages/Admin/AddArticle/index.css
+++ b/react-blog-admin/src/pages/Admin/AddArticle/index.css
@@ -1,7 +1,7 @@
-/* 上方标题盒子 */
+/* ———————————————————————————上方标题盒子——————————————————————————— */
 .titleBox {
-    height: 50px;
-    background-color: #70a7da;
+    height: 58px;
+    background-color: #a6aeb4;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -9,15 +9,23 @@
 }
 
 /* 标题输入框 */
-.inputTitle {
+.inputTitle,
+.inputEng {
     height: 36px;
     padding: 0 20px;
     font-size: 22px;
     font-weight: 700;
     background-color: #fff;
-    margin: 0 10px;
     border-radius: 12px;
+}
+
+.inputTitle {
+    flex: 3;
+    margin: 0 10px;
+}
+.inputEng {
     flex: 1;
+    margin-right: 10px;
 }
 
 /* 草稿、发布按钮 */
@@ -44,8 +52,28 @@
     color: #fff;
 }
 
-/* 内容区大盒子 */
-.contentBox {
+/* ———————————————————————————标签、分类大盒子———————————————————————————— */
+.tagClassBox {
+    position: relative;
+    height: 44px;
+    background-color: #a6aeb4;
+}
+.classBox,
+.tagBox {
+    position: absolute;
+    top: 0px;
+    font-weight: 700;
+    font-size: 16px;
+}
+.classBox {
+    left: 20px;
+}
+.tagBox {
+    left: 420px;
+}
+
+/* ———————————————————————————编辑区大盒子——————————————————————————— */
+.editBox {
     display: flex;
     flex-direction: row;
 }
@@ -53,7 +81,8 @@
 /* 编辑/显示区 */
 .inputRegion,
 .showRegion {
-    min-height: calc(100vh - 184px);
+    /* footer60 Header54 margin-top20 titleBox tagClassBox */
+    min-height: calc(100vh - 60px - 54px - 20px - 58px - 44px);
     width: 50%;
     background-color: #fff;
     padding: 20px;
@@ -65,3 +94,42 @@
     outline: none;
     word-wrap: break-word;
 }
+
+/* ——————————————————————————————显示区markdown样式—————————————————————————————— */
+/* 表格 */
+.showRegion table {
+    border: 1px solid #000;
+    border-spacing: 0; /*去掉单元格间隙*/
+}
+.showRegion table th,
+.showRegion table td {
+    padding: 6px 14px;
+    border: 1px solid #000;
+}
+/* h1 h2 h3 h4 h5 h6 p */
+.showRegion h1,
+.showRegion h2,
+.showRegion h3,
+.showRegion h4,
+.showRegion h5,
+.showRegion h6,
+.showRegion p {
+    margin: 0.3em;
+}
+/* 行内代码 */
+.showRegion code {
+    color: red;
+    background-color: #f9f2f4;
+    padding: 0 4px;
+}
+
+/* 图片 */
+.showRegion p img {
+    display: block;
+    max-width: 100%;
+    margin: 14px auto;
+    border-radius: 12px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+}
+
+/* ———————————————————————————————————————————————————————————— */
