原生渲染表格

--- a/react-blog-admin/src/pages/Admin/Article/index.css
+++ b/react-blog-admin/src/pages/Admin/Article/index.css
@@ -30,7 +30,7 @@
 
 /* ————————————————————————————表格区———————————————————————————————— */
 .articlesBox table {
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     width: 100%;
 }
 
