--- a/react-blog-admin/src/pages/Admin/Article/index.css
+++ b/react-blog-admin/src/pages/Admin/Article/index.css
@@ -2,30 +2,14 @@
 .searchBox {
     position: relative;
     height: 50px;
-    background-color: #d1d1d1;
+    background-color: #b9dfff;
 }
 
-.addArticleBtn {
-    width: 54px;
-    height: 36px;
+.Search {
     position: absolute;
     top: 50%;
-    left: 10px;
-    font-weight: 700;
+    left: 6px;
     transform: translate(0, -50%);
-    background-color: #40a9ff;
-    border-radius: 12px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    user-select: none;
-    transition: all 0.2s;
-}
-
-.addArticleBtn:hover {
-    background-color: #008cff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
 }
 
 /* ————————————————————————————表格区———————————————————————————————— */
