文章页搜索功能完毕

--- a/react-blog-admin/src/components/Nav/index.css
+++ b/react-blog-admin/src/components/Nav/index.css
@@ -15,7 +15,7 @@
     transform: translate(-50%, 0);
     height: 40px;
     width: 80%;
-    background-color: #334454;
+    /* background-color: #334454; */
     line-height: 40px;
     text-align: center;
     font-size: 18px;
