--- a/react-blog-admin/src/pages/Admin/Gallery/index.css
+++ b/react-blog-admin/src/pages/Admin/Gallery/index.css
@@ -113,9 +113,10 @@
     width: 330px;
     transition: all 0.3s;
     z-index: 9;
+    border-bottom: 4px solid rgba(255, 255, 255, 0);
 }
 .galleryUl li:hover .galleryTitleBox {
-    border-bottom: 4px solid #fff;
+    border-bottom: 4px solid rgba(255, 255, 255, 1);
 }
 
 .galleryTitleBox span {
@@ -127,15 +128,18 @@
 .galleryDescr {
     position: absolute;
     z-index: 9;
-    /* left: 40px; */
-    left: 600px;
+    left: 40px;
+    /* left: 600px; */
     top: 100px;
-    width: 440px;
+    width: 320px;
     font-size: 24px;
     transition: all 0.3s;
+    word-wrap: break-word;
+    opacity: 0;
 }
 .galleryUl li:hover .galleryDescr {
-    left: 50px;
+    /* left: 40px; */
+    opacity: 1;
 }
 .galleryMask {
     position: absolute;
