--- a/react-blog-admin/src/pages/Admin/Say/index.css
+++ b/react-blog-admin/src/pages/Admin/Say/index.css
@@ -1,5 +1,5 @@
 .sayInputBox {
-    height: 120px;
+    height: 140px;
 }
 
 .sayInputText {
@@ -10,6 +10,7 @@
     padding: 10px;
     border: 1px solid #ccc;
     transition: all 0.3s;
+    font-size: 16px;
 }
 
 .sayInputText:hover {
@@ -20,6 +21,7 @@
     margin-right: 8px;
 }
 
-.ant-popover-inner-content {
+.emojiContent {
     width: 500px;
+    word-break: break-all;
 }
