修改markdown编辑页面代码，重构关于页面结构

--- a/react-blog-admin/public/index.css
+++ b/react-blog-admin/public/index.css
@@ -19,6 +19,14 @@ body,
     padding: 0;
 }
 
+body {
+    min-width: 1600px;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
 input {
     background: none;
     outline: none;
