--- a/react-blog-admin/src/pages/Admin/AddArticle/index.css
+++ b/react-blog-admin/src/pages/Admin/AddArticle/index.css
@@ -87,17 +87,18 @@
 .showRegion {
     /* footer60 Header54 margin-top20 titleBox tagClassBox */
     min-height: calc(100vh - 60px - 54px - 20px - 58px - 44px);
-    /* width: 50%; */
     flex: 1;
     background-color: #fff;
     padding: 30px;
     font-size: 18px;
+    word-break: break-word;
 }
 
 .inputRegion {
     background-color: #ddd;
     outline: none;
-    word-wrap: break-word;
+    overflow-y: hidden;
+    border: none;
 }
 
 /* ——————————————————————————————显示区markdown样式—————————————————————————————— */
