--- a/react-blog-admin/src/components/Content/Main/Class/index.css
+++ b/react-blog-admin/src/components/Content/Main/Class/index.css
@@ -56,6 +56,7 @@
     top: 92px;
     bottom: 0;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 /* 设置滚动条的样式 */
@@ -90,4 +91,18 @@
 .classesEdit:hover,
 .classesDelete:hover {
     color: #1890ff;
+}
+
+.editClassInput {
+    border: 1px solid #ccc;
+    width: 100%;
+    text-align: center;
+    height: 36px;
+    font-size: 16px;
+    padding: 0 10px;
+    transition: all 0.3s;
+}
+
+.editClassInput:hover {
+    box-shadow: 0 0 4px #1890ff;
 }
