--- a/react-blog-admin/src/components/Content/Main/MyTag/index.css
+++ b/react-blog-admin/src/components/Content/Main/MyTag/index.css
@@ -6,11 +6,24 @@
 }
 .theTag {
     display: inline-block;
-    margin: 30px;
+    /* margin: 0 10px 10px 10px; */
+    margin: 0 0 10px 10px;
     padding: 0 10px;
     height: 30px;
     text-align: center;
     line-height: 30px;
     font-size: 16px;
-    background-color: rgb(218, 158, 158);
+    user-select: none;
+    transition: all 0.2s;
+    color: #fff;
+}
+
+.theTag:hover {
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+    transform: scale(1.2);
+}
+
+.deleteTagBtn {
+    font-size: 14px;
+    margin-left: 6px;
 }
