--- a/react-blog-admin/src/components/Content/Main/Class/index.css
+++ b/react-blog-admin/src/components/Content/Main/Class/index.css
@@ -4,6 +4,11 @@
     background-color: #fff;
     margin-right: 20px;
     position: relative;
+    transition: all 0.2s;
+}
+
+.ClassBox:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 }
 
 .homeSingleBox {
