--- a/react-blog-admin/src/components/Content/Main/Welcome/index.css
+++ b/react-blog-admin/src/components/Content/Main/Welcome/index.css
@@ -4,6 +4,8 @@
     background-color: #fff;
     transition: all 0.2s;
     position: relative;
+    user-select: none;
+    flex: 2;
 }
 
 .WelcomeBox:hover {
@@ -18,4 +20,23 @@
     width: 110px;
     height: 110px;
     border-radius: 50%;
+}
+
+.welcomeTitle {
+    font-size: 36px;
+    font-weight: 700;
+    position: absolute;
+    left: 150px;
+    top: 20px;
+}
+
+.poemContent {
+    position: absolute;
+    left: 150px;
+    top: 80px;
+    font-size: 18px;
+}
+
+.poemTitle {
+    font-size: 16px;
 }
