--- a/react-blog-admin/src/components/Content/Main/Infor/index.css
+++ b/react-blog-admin/src/components/Content/Main/Infor/index.css
@@ -15,13 +15,15 @@
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0);
+}
+
+.dateText {
     top: 20px;
     font-size: 36px;
     font-weight: 700;
 }
 
 .ipText {
+    bottom: 20px;
     font-size: 22px;
-    font-weight: 400;
-    top: 80px;
 }
