--- a/react-blog-admin/src/components/Content/Main/Class/index.css
+++ b/react-blog-admin/src/components/Content/Main/Class/index.css
@@ -81,6 +81,28 @@
 .classesItem {
     position: relative;
 }
+
+.className {
+    margin-left: 30px;
+}
+
+.articlesNum {
+    position: absolute;
+    background-color: #1890ff;
+    color: #fff;
+    width: 22px;
+    height: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-size: 16px;
+    top: 50%;
+    transform: translate(0, -50%);
+    left: 14px;
+    user-select: none;
+}
+
 .classesEdit,
 .classesDelete {
     position: absolute;
@@ -93,9 +115,12 @@
     right: 48px;
 }
 
-.classesEdit:hover,
-.classesDelete:hover {
+.classesEdit:hover {
     color: #1890ff;
+}
+
+.classesDelete:hover {
+    color: red;
 }
 
 .editClassInput {
