--- a/react-blog/src/components/Blog/Content/index.css
+++ b/react-blog/src/components/Blog/Content/index.css
@@ -1,10 +1,23 @@
 .Content-box {
-    min-height: calc(100vh - 50px - 60px);
+    min-height: calc(100vh - 60px - 100px);
 }
 
 .content-center {
-    height: 100%;
+    min-height: calc(100vh - 60px - 100px);
     width: 1300px;
     margin: auto;
-    background-color: rgb(189, 101, 101);
+    /* background-color: rgb(189, 101, 101); */
+    display: flex;
+}
+
+.content-main {
+    flex: 1;
+    min-height: calc(100vh - 60px - 100px);
+    /* background-color: rgb(211, 206, 206); */
+}
+
+.content-aside {
+    width: 300px;
+    /* background-color: rgb(230, 240, 89); */
+    color: #fff;
 }
