--- a/react-blog/src/components/Blog/Footer/index.css
+++ b/react-blog/src/components/Blog/Footer/index.css
@@ -1,8 +1,17 @@
 footer {
-    height: 60px;
-    background-color: rgb(120, 243, 171);
+    height: 100px;
+    /* background-color: rgb(130, 255, 151); */
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    color: #fff;
+}
+
+.icp {
+    color: #fff;
+    transition: all 0.2s;
+}
+.icp:hover {
+    color: rgb(180, 180, 0);
 }
