--- a/react-blog/src/components/Blog/Nav/index.css
+++ b/react-blog/src/components/Blog/Nav/index.css
@@ -1,11 +1,59 @@
+nav,
+.nav-bottm {
+    width: 100%;
+    height: 60px;
+}
+
 nav {
-    height: 50px;
-    background-color: rgb(192, 192, 192);
+    position: fixed;
+    z-index: 9;
+    background-color: rgba(0, 0, 0, 0.7);
+    /* background-color: rgba(212, 202, 202, 0.7); */
+    user-select: none;
 }
 
 .nav-content {
+    position: relative;
     width: 1300px;
     height: 100%;
-    background-color: rgb(244, 247, 108);
-    margin: auto;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.navlink {
+    cursor: default;
+}
+.nav-btn,
+.home-btn {
+    height: 36px;
+    width: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    margin-right: 20px;
+    border-radius: 14px;
+    color: #fff;
+    transition: all 0.2s;
+}
+.nav-btn:hover,
+.home-btn:hover {
+    box-shadow: 0 0 10px rgba(180, 180, 0, 0.8);
+    background-color: rgb(180, 180, 0);
+    color: rgb(88, 88, 88);
+}
+
+.margin-0 {
+    margin-right: 0;
+}
+
+.home-btn {
+    position: absolute;
+    font-size: 28px;
+    top: 50%;
+    left: 10px;
+    transform: translate(0, -50%);
+    font-size: 26px;
+    width: 60px;
 }
