--- a/react-blog/src/components/Blog/Content/ClockCard/index.css
+++ b/react-blog/src/components/Blog/Content/ClockCard/index.css
@@ -24,6 +24,7 @@
     top: 50%;
     transform: translate(-50%, -50%);
     border-radius: 50%;
+    box-shadow: 0 0 22px #000 inset;
 }
 .zero {
     width: 2px;
