侧边栏智能固定

--- a/react-blog/public/index.css
+++ b/react-blog/public/index.css
@@ -7,9 +7,12 @@ div {
     list-style: none;
 } */
 
-/* body::-webkit-scrollbar {
-    display: none;
+/* body {
+    overflow-y: overlay;
 } */
+body::-webkit-scrollbar {
+    display: none;
+}
 
 html,
 body,
@@ -17,10 +20,6 @@ body,
     height: 100%;
     margin: 0;
     padding: 0;
-}
-
-body::-webkit-scrollbar {
-    display: none;
 }
 
 input {
