--- a/react-blog/src/components/Blog/Content/index.css
+++ b/react-blog/src/components/Blog/Content/index.css
@@ -3,21 +3,26 @@
 }
 
 .content-center {
+    position: relative;
     min-height: calc(100vh - 60px - 100px);
     width: 1300px;
     margin: auto;
-    /* background-color: rgb(189, 101, 101); */
     display: flex;
 }
 
 .content-main {
-    flex: 1;
+    width: 1000px;
+    /* flex: 1; */
     min-height: calc(100vh - 60px - 100px);
-    /* background-color: rgb(211, 206, 206); */
 }
 
 .content-aside {
     width: 300px;
-    /* background-color: rgb(230, 240, 89); */
     color: #fff;
+}
+
+.aside-fixed {
+    position: fixed;
+    top: -660px;
+    right: calc((100vw - 1300px) / 2);
 }
