--- a/react-blog/src/pages/Article/index.css
+++ b/react-blog/src/pages/Article/index.css
@@ -4,7 +4,11 @@
 
 .standard-page-title {
     width: 100%;
-    height: 300px;
+    height: 260px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 20px;
 }
 
 .standard-page-body {
@@ -22,3 +26,80 @@
     width: 300px;
     padding: 0 20px;
 }
+
+.article-title {
+    font-size: 52px;
+    font-weight: 700;
+    font-family: 'FiraCode', 'yu400';
+}
+
+.article-class,
+.article-date {
+    display: inline-block;
+    font-size: 18px;
+    background-color: #232324;
+    height: 40px;
+    padding: 0 10px;
+    line-height: 40px;
+    margin-right: 20px;
+    border-radius: 14px;
+    user-select: none;
+    transition: all 0.2s;
+}
+
+.article-class:hover,
+.article-date:hover {
+    background-color: rgb(180, 180, 0);
+    color: rgb(88, 88, 88);
+}
+
+.standard-page-main-content {
+    padding: 40px;
+    font-size: 20px;
+    color: #fff;
+}
+
+/* ——————————————————————————————显示区markdown样式—————————————————————————————— */
+/* 表格 */
+.markdownStyle table {
+    border: 1px solid #000;
+    border-spacing: 0; /*去掉单元格间隙*/
+}
+.markdownStyle table th,
+.markdownStyle table td {
+    padding: 6px 14px;
+    border: 1px solid #000;
+}
+/* h1 h2 h3 h4 h5 h6 p */
+.markdownStyle h1,
+.markdownStyle h2,
+.markdownStyle h3,
+.markdownStyle h4,
+.markdownStyle h5,
+.markdownStyle h6 {
+    color: #fff;
+    font-weight: 700;
+}
+/* 行内代码 */
+.markdownStyle code {
+    color: rgb(241, 241, 151);
+    background-color: #3f3f3f;
+    padding: 0 6px;
+}
+
+/* 图片 */
+.markdownStyle p img {
+    display: block;
+    max-width: 100%;
+    margin: 14px auto;
+    border-radius: 12px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+    -webkit-user-drag: none;
+}
+
+.markdownStyle strong {
+    color: rgb(0, 171, 184);
+    text-decoration: underline;
+}
+
+/* ———————————————————————————————————————————————————————————— */
