--- a/react-blog/src/pages/Article/index.css
+++ b/react-blog/src/pages/Article/index.css
@@ -10,16 +10,35 @@
     justify-content: center;
     padding: 0 20px;
 }
+.turn-back-btn {
+    position: fixed;
+    top: 100px;
+    left: 40px;
+    width: 50px;
+    height: 50px;
+    background-color: #232324;
+    border-radius: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 26px;
+    transition: all 0.2s;
+    user-select: none;
+}
+.turn-back-btn:hover {
+    background-color: rgb(180, 180, 0);
+    color: rgb(88, 88, 88);
+}
 
 .standard-page-body {
     display: flex;
 }
 
 .standard-page-box {
-    flex: 1;
-    /* height: 1000px; */
+    width: 1000px;
     background-color: #232324;
     border-radius: 20px;
+    padding: 40px;
 }
 
 .standard-aside-box {
@@ -54,7 +73,7 @@
 }
 
 .standard-page-main-content {
-    padding: 40px;
+    /* padding: 40px; */
     font-size: 20px;
     color: #fff;
 }
@@ -103,3 +122,18 @@
 }
 
 /* ———————————————————————————————————————————————————————————— */
+
+.standard-page-copyright {
+    width: 100%;
+    height: 140px;
+    border-radius: 20px;
+    background-color: rgb(94, 92, 92);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.copyright-title {
+    font-size: 26px;
+}
