--- a/react-blog/src/pages/Article/index.css
+++ b/react-blog/src/pages/Article/index.css
@@ -47,7 +47,7 @@
 }
 
 .article-title {
-    font-size: 52px;
+    font-size: 50px;
     font-weight: 700;
     font-family: 'FiraCode', 'yu400';
 }
@@ -124,25 +124,131 @@
 /* ———————————————————————————————————————————————————————————— */
 
 .standard-page-copyright {
+    position: relative;
     width: 100%;
-    height: 140px;
+    height: 120px;
     border-radius: 20px;
-    background-color: rgb(94, 92, 92);
+    background-color: #141a24;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: flex-start;
     font-family: 'yu400';
+    overflow: hidden;
+    box-shadow: 0 0 14px rgb(0, 0, 0) inset;
+}
+.copyright-icon {
+    position: absolute;
+    right: 40px;
+    width: 140px;
+    height: 140px;
+}
+.copyright-icon path {
+    fill: rgb(88, 88, 88);
+}
+.standard-page-copyright-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    height: 100px;
 }
 
 .copyright-title {
-    font-size: 24px;
-    margin-left: 40px;
+    font-size: 22px;
+    margin-left: 20px;
+    font-weight: 700;
+    font-family: 'yu100';
 }
 
-.copyright-url,
+.copyright-url {
+    position: relative;
+    display: inline-block;
+    font-size: 16px;
+    color: #fff;
+    margin-left: 20px;
+    height: 24px;
+    user-select: none;
+}
+
+.copy-icon-btn {
+    position: absolute;
+    top: 0;
+    right: -30px;
+    height: 24px;
+    width: 24px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.2s;
+}
+.copy-icon-btn:hover {
+    background-color: rgb(180, 180, 0);
+}
+.copy-icon {
+    width: 16px;
+    height: 16px;
+}
+.copy-icon path {
+    fill: #fff;
+}
+.copy-icon-btn:hover .copy-icon path {
+    fill: rgb(88, 88, 88);
+}
 .copyright-text {
     font-size: 16px;
-    margin-left: 40px;
-    margin-top: 4px;
+    margin-left: 20px;
+    height: 24px;
+    user-select: none;
 }
+.copyright-name {
+    display: inline-block;
+    padding: 0 4px;
+    height: 24px;
+    line-height: 24px;
+    font-weight: 700;
+    transition: all 0.2s;
+    border-radius: 8px;
+    color: #fff;
+    cursor: default;
+}
+.copyright-name:hover {
+    background-color: rgb(180, 180, 0);
+    color: rgb(88, 88, 88);
+}
+
+.copyed-info {
+    position: fixed;
+    left: 10px;
+    bottom: 10px;
+    width: 200px;
+    height: 50px;
+    background-color: #232324;
+    color: #fff;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 14px;
+    font-size: 16px;
+    user-select: none;
+    transition: all 0.2s;
+}
+
+/* 
+.SocialCard-box {
+    height: 80px;
+    background-color: #232324;
+    margin: 20px;
+    border-radius: 20px;
+    transition: all 0.2s;
+    font-size: 30px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.SocialCard-box:hover {
+    box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.6);
+    transform: scale(1.04);
+} */
