--- a/src/pages/Admin/Msg/index.css
+++ b/src/pages/Admin/Msg/index.css
@@ -29,3 +29,11 @@
     width: 100%;
     height: 100%;
 }
+
+.msgs-content {
+    width: 400px;
+    height: 100%;
+    margin: 0 auto;
+    padding: 0;
+    overflow: hidden;
+}
