--- a/src/components/Content/Footer/index.css
+++ b/src/components/Content/Footer/index.css
@@ -1,6 +1,7 @@
 .FooterBox {
-    height: 60px;
+    height: 70px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     font-size: 16px;
