--- a/src/pages/Admin/Msg/index.css
+++ b/src/pages/Admin/Msg/index.css
@@ -31,9 +31,9 @@
 }
 
 .msgs-content {
-    width: 400px;
+    width: 100%;
     height: 100%;
-    margin: 0 auto;
-    padding: 0;
+    margin: 0;
+    padding: 0 20px;
     overflow: hidden;
 }
