--- a/src/pages/Login/LoginBox/index.css
+++ b/src/pages/Login/LoginBox/index.css
@@ -76,7 +76,7 @@
   position: absolute;
   top: 224px;
   left: 50%;
-  transform: translate(-50%, 0);
+  transform: translate(20px, 0);
   width: 100px;
   height: 50px;
   display: flex;
