--- a/src/global.custom.scss
+++ b/src/global.custom.scss
@@ -11,6 +11,12 @@ body {
   margin: 0;
 }
 
+div {
+  box-sizing: border-box;
+  font-family: BlinkMacSystemFont, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial,
+    sans-serif;
+}
+
 a,
 a:link,
 a:visited,
@@ -18,6 +24,17 @@ a:hover,
 a:active,
 a:focus {
   text-decoration: none !important;
+}
+
+img {
+  -webkit-user-drag: none;
+}
+
+input {
+  background: none;
+  outline: none;
+  border: 0px;
+  border-radius: 0;
 }
 
 // 重置antd样式
