--- a/src/pages/Admin/index.scss
+++ b/src/pages/Admin/index.scss
@@ -2,6 +2,7 @@
 @import '../../styles/style.scss';
 
 $navWidth: 160px;
+$headerHeight: 54px;
 
 .navItemBase {
   margin: 14px auto;
@@ -13,6 +14,23 @@ $navWidth: 160px;
   user-select: none;
   border-radius: 15px;
   overflow: hidden;
+}
+
+.headerBtnBase {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 14px;
+  user-select: none;
+  font-size: 22px;
+  color: #a7d5ff;
+  background-color: #fff;
+  @extend .trans;
 }
 
 .adminBox {
@@ -50,12 +68,55 @@ $navWidth: 160px;
         .navItemActive {
           background-color: $themeColor3;
           color: #fff;
+          cursor: pointer;
+        }
+
+        .navItemActive {
+          cursor: default !important;
         }
       }
     }
   }
 
   .content {
-    width: calc(100%-$navWidth);
+    flex: 1;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    .headerBox {
+      height: $headerHeight;
+      background-color: #a7d5ff;
+      position: relative;
+
+      .blogBtn {
+        right: calc(20px * 2 + 40px);
+        @extend .headerBtnBase;
+      }
+
+      .blogBtn:hover {
+        color: #fff;
+        background-color: $themeColor3;
+        cursor: pointer;
+      }
+
+      .logoutBtn {
+        right: 20px;
+        @extend .headerBtnBase;
+      }
+
+      .logoutBtn:hover {
+        color: #fff;
+        background-color: red;
+        cursor: pointer;
+      }
+    }
+
+    .routeContent {
+      padding: 20px;
+      width: 100%;
+      flex: 1;
+      background-color: #f0f2f5;
+    }
   }
 }
