feat: 解决懒加载路由闪烁问题

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -6,3 +6,5 @@ $themeColor3_light: var(--themeColor3, rgb(64, 150, 255));
 
 $themeColor4: var(--themeColor3, rgb(255, 77, 79));
 $themeColor4_light: var(--themeColor3, rgb(255, 135, 133));
+
+$themeColor5: var(--themeColor3, rgb(221, 236, 255));
