--- a/src/components/Loading/index.scss
+++ b/src/components/Loading/index.scss
@@ -1,7 +1,7 @@
 @import '../../styles/base.scss';
 
 .loadingBox {
-  height: calc(100vh - 54px - 20px - 50px - 70px - 20px);
+  height: calc(100vh - 54px - 70px - 20px * 2);
   display: flex;
   justify-content: center;
   align-items: center;
