--- a/src/global.custom.scss
+++ b/src/global.custom.scss
@@ -18,7 +18,7 @@ body::-webkit-scrollbar {
 div {
   box-sizing: border-box;
   font-family: BlinkMacSystemFont, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial,
-    sans-serif !important;
+    sans-serif;
 }
 
 a,
