--- a/src/pages/Admin/Home/index.scss
+++ b/src/pages/Admin/Home/index.scss
@@ -1,5 +1,4 @@
-.test {
-  height: 50px;
-  margin-bottom: 10px;
-  background-color: #000;
+.countCardContainer {
+  display: flex;
+  justify-content: space-between;
 }
