--- a/src/global.custom.scss
+++ b/src/global.custom.scss
@@ -125,3 +125,9 @@ $pageHeight: 34px;
     }
   }
 }
+
+// model
+.ant-modal-title {
+  font-size: 20px !important;
+  font-weight: 700 !important;
+}
