--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,10 +1,10 @@
 // 颜色
-$themeColor1: var(--themeColor1, rgb(18, 83, 143));
-$themeColor2: var(--themeColor2, rgb(195, 206, 217));
-$themeColor3: var(--themeColor3, rgb(22, 119, 255));
-$themeColor3_light: var(--themeColor3, rgb(64, 150, 255));
+$themeColor1: rgb(18, 83, 143);
+$themeColor2: rgb(195, 206, 217);
+$themeColor3: rgb(22, 119, 255);
+$themeColor3_light: rgb(64, 150, 255);
 
-$themeColor4: var(--themeColor3, rgb(255, 77, 79));
-$themeColor4_light: var(--themeColor3, rgb(255, 135, 133));
+$themeColor4: rgb(255, 77, 79);
+$themeColor4_light: rgb(255, 135, 133);
 
-$themeColor5: var(--themeColor3, rgb(221, 236, 255));
+$themeColor5: rgb(221, 236, 255);
