--- a/src/components/PageHeader/index.scss
+++ b/src/components/PageHeader/index.scss
@@ -1,5 +1,5 @@
 .pageHeaderBox {
-  background-color: #a7d5ff;
+  background-color: #c9e5ff;
   height: 50px;
   padding: 5px;
   border-radius: 12px;
