--- a/src/components/ModalTitle/index.scss
+++ b/src/components/ModalTitle/index.scss
@@ -1,12 +1,12 @@
 @import '../../styles/base.scss';
 
-.modelTitleBox {
+.ModalTitleBox {
   height: 34px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
 
-  .modelTitleCustom {
+  .ModalTitleCustom {
     height: 26px;
     display: flex;
     justify-content: center;
