--- a/src/global.custom.scss
+++ b/src/global.custom.scss
@@ -130,7 +130,7 @@ $pageHeight: 34px;
   }
 }
 
-// model
+// modal
 .ant-modal-title {
   font-size: 20px !important;
   font-weight: 700 !important;
